style.css
/* background colors
#1d1d1d
#d4ffe8
#56f09f
#00ffff
#be92e6
#696f76
#44494f
#4d5055
#4c4c4c
#8bed4f
#1d552a */

/* font-family: 'Inconsolata', monospace;
font-family: 'Play', sans-serif;
font-family: 'Quicksand', sans-serif;
font-family: 'Raleway', sans-serif;
font-family: 'Space Grotesk', sans-serif;
font-family: 'Trispace', sans-serif;
    font-family: 'Kanit', sans-serif;
 */

@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&family=Kanit:wght@200&family=Play&family=Quicksand:wght@300&family=Raleway:wght@200&family=Space+Grotesk:wght@300&family=Trispace:wght@200&display=swap');

* {
    margin: 0;
    padding: 0;
}

.djplay {
    position: fixed;
    z-index: -8;
    width: 100vw;
}

.section {
    margin: 0 180px;
    overflow: hidden;
}

.unregulate {
    position: fixed;
    z-index: -8;
    width: 100vw;
    height: 95px;
    filter: opacity(84%);
    top: 0px;
}

.listitems {
    display: flex;
    list-style: none;
    align-items: center;
    width: 100vw;
    position: fixed;
    z-index: 4;
    font-family: 'Inconsolata', monospace;
    overflow: hidden;
}

.listitems li {
    margin: 0px 30px;
    cursor: pointer;
    transition: all .15s ease-in-out;
    white-space: nowrap;
    cursor: pointer;
    font-size: 20px;
    color: #56f09f;
    font-size: 18px;
    font-weight: 800;
    letter-spacing: .2px;
    padding: 5px;
}

.listitems li:hover {
    padding: 10px;
}

.listitems button {
    transition: all 0.75s ease-in-out;
    display: inline-flex;
    align-items: center;
    height: 28px;
    background: linear-gradient(267.49deg, rgba(100, 206, 19, 0.4), rgba(91, 35, 225, .25));
    border: 2px solid white;
    border-radius: 5px;
    color: white;
    padding: 16px 40px;
    font-family: Gilroy !important;
    font-size: 18px;
    font-weight: 800;
    letter-spacing: .2px;
    line-height: 26px;
    text-align: center;
    -webkit-transform: scaleX(1);
    transform: scaleX(1);
    cursor: pointer;
}

.flexiten {
    flex: .41;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    padding: 0 25px;
    border-width: 3px;
    border-color: #8bed4f;
    border-style: solid;
    margin-left: 162px;
}


.flexend {
    flex: 0.48;
    display: flex;
    align-items: center;
    justify-content: center;
}

.unleash {
    color: #8bed4f;
    font-size: 210px;
    font-weight: 900;
    line-height: 180px;
    text-shadow: 0 5px 20px rgb(25 0 96 / 50%);
    margin-top: 140px;
    font-family: 'Cinzel', serif;
}

.unleash span {
    color: #56f09f;
    font-size: 210px;
    font-weight: 900;
    line-height: 180px;
    text-shadow: 0 5px 20px rgb(25 0 96 / 50%);
}

.head2 {
    color: #56f09f;
    font-size: 40px;
    font-weight: 900;
    line-height: 180px;
    text-shadow: 0 5px 20px rgb(25 0 96 / 50%);
    font-family: 'Cinzel', serif;
}

.signup {
    transition: all 0.75s ease-in-out;
    display: inline-flex;
    align-items: center;
    height: 48px;
    background: linear-gradient(267.49deg, rgba(100, 206, 19, 0.4), rgba(91, 35, 225, .25));
    border: 2px solid white;
    border-radius: 5px;
    color: white;
    padding: 16px 40px;
    font-family: Gilroy !important;
    font-size: 18px;
    font-weight: 800;
    letter-spacing: .2px;
    line-height: 26px;
    text-align: center;
    -webkit-transform: scaleX(1);
    transform: scaleX(1);
    cursor: pointer;
    margin-right: 34px;
}

.signup:hover {
    padding: 25px;
}

.tokens {
    transition: all 0.75s ease-in-out;
    display: inline-flex;
    align-items: center;
    height: 48px;
    background: linear-gradient(267.49deg, rgba(100, 206, 19, 0.4), rgba(91, 35, 225, .25));
    border: 2px solid white;
    border-radius: 5px;
    color: white;
    padding: 16px 40px;
    font-family: Gilroy !important;
    font-size: 18px;
    font-weight: 800;
    letter-spacing: .2px;
    line-height: 26px;
    text-align: center;
    -webkit-transform: scaleX(1);
    transform: scaleX(1);
    cursor: pointer;
}

.tokens:hover {
    padding: 25px;
}

.desccontainer {
    margin: 44px 0;
    flex-shrink: 0;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.image {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.freedom {
    font-size: 64px;
    font-weight: 800;
    line-height: 78px;
    text-align: center;
    color: #303030;
    text-shadow: 0 5px 20px rgb(25 0 96 / 50%);
}


.about {
    color: #464b4f;
    font-size: 24px;
    font-weight: 800;
    line-height: 34px;
    text-align: center;
    max-width: 1110px;
    margin: 20px 0;
    text-shadow: 0 5px 20px rgb(25 0 96 / 50%);
    font-family: 'Inconsolata', monospace;
}

.website {
    background-color: #d4ffe8;
    margin-top: -10px;
}

.artist {
    margin: 77px 175px 0px 175px;
    display: flex;
    flex-direction: column;

}

.artist p {
    color: #464b4f;
    font-size: 25px;
    font-weight: 800;
    line-height: 34px;
    margin: 20px 0;
    text-shadow: 0 5px 20px rgb(25 0 96 / 50%);
    font-family: 'Inconsolata', monospace;
}

.artists {
    color: #303030;
    font-size: 42px;
    font-weight: 700;
    line-height: 56px;
    text-shadow: 0 5px 20px rgb(25 0 96 / 50%);

}

.arttist {
    display: flex;
    align-items: center;
}

.arttist img {
    transform: perspective(400px) rotateY(0deg) rotateX(0deg);
    box-shadow: rgba(16, 24, 28, 0.4) 0px 10px 50px -2px;
    clip-path: circle(50%);
}

.move {
    position: relative;
    top: 130px;
    right: 130px;
    color: black;
    font-size: 15px;
    font-weight: 990;
    line-height: 56px;
    text-shadow: 0 5px 20px rgb(25 0 96 / 50%);
}

.listento {
    font-size: 64px;
    font-weight: 800;
    line-height: 78px;
    text-align: center;
    color: #303030;
    text-shadow: 0 5px 20px rgb(25 0 96 / 50%);
    margin-top: 88px;
}
/* ... */

